--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -14,6 +14,10 @@
     <!-- Nuestros estilos personalizados (mínimos) -->
     <link rel="stylesheet" href="/css/style.css">
     
+    <% if (title === 'Inicio') { %>
+    <link rel="stylesheet" href="/css/dashboard.css">
+    <% } %>
+
     <% if (title && title.includes('Pacientes')) { %>
     <link rel="stylesheet" href="/css/pacientes.css">
     <% } %>
@@ -36,12 +40,27 @@
                                 <i class="fas fa-home me-1"></i>Inicio
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/pacientes">
+                                <i class="fas fa-users me-1"></i>Pacientes
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/basculas">
+                                <i class="fas fa-weight me-1"></i>Básculas
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/temperaturas">
+                                <i class="fas fa-thermometer-half me-1"></i>Temperaturas
+                            </a>
+                        </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" 
                                data-bs-toggle="dropdown">
                                 <i class="fas fa-user me-1"></i><%= usuario.username %>
                             </a>
-                            <ul class="dropdown-menu">
+                            <ul class="dropdown-menu dropdown-menu-end">
                                 <li><span class="dropdown-item-text">
                                     <small><i class="fas fa-user-tag me-1"></i>Rol: <%= usuario.rol %></small>
                                 </span></li>
@@ -107,5 +126,13 @@
     
     <!-- Nuestros scripts -->
     <script src="/js/main.js"></script>
+   
+    <% if (title === 'Inicio') { %>
+    <script src="/js/dashboard.js"></script>
+    <% } %>
+
+    <% if (title && title.includes('Pacientes')) { %>
+    <script src="/js/pacientes.js"></script>
+    <% } %>
 </body>
 </html>
